--- a/Accesorios/accesorios.html
+++ b/Accesorios/accesorios.html
@@ -65,6 +65,18 @@
         </div>
         <div id="productos"></div>
     </div>
+    <hr style="margin-top: 25px;">
+    <div class="apartado2">
+        <div class="apartado2_info">
+            <h2>Productos Para Tu Coche</h2>
+        </div>
+
+        <div id="carrusel_apartado2">
+
+        </div>
+        <button class="flechaI"> < </button>
+        <button class="flechaD"> > </button>
+    </div>
 </main>
     
 </body>
