--- a/pages/suvs.html
+++ b/pages/suvs.html
@@ -17,6 +17,10 @@
         <li><a href="../pages/models.html">Modelos</a></li>
     </ul>
     </nav>
+    <div id="cont" class="cont">
+
+    </div>
     <script src="../js/main.js"></script>
+    <script src="../js/suv.js"></script>
 </body>
 </html>
