--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -20,6 +20,8 @@
         <li><a href="../pages/login.html">Iniciar Sesion</a></li>
         <li><a href="../pages/inicio.html">Inicio</a></li>
         <li><a href="../pages/models.html">Modelos</a></li>
+        <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+        <li><a href="../Accesorios/accesorios.html">Accesorios</a></li>
     </ul>
     </nav>
     <h2>¡Inmerse yourself in a world of</h2>
