--- a/Accesorios/accesorios.html
+++ b/Accesorios/accesorios.html
@@ -32,8 +32,8 @@
                 <a><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a>
             </li>
             <li><p class="tituloV">Vecchio</p></li>
-            <li class="enlaces"><a href="#">Inicio</a></li>
-            <li class="enlaces"><a href="#">Modelos</a></li>
+            <li class="enlaces"><a href="../pages/inicio.html">Inicio</a></li>
+            <li class="enlaces"><a href="../pages/models.html">Modelos</a></li>
             <li class="enlaces"><a href="../Nosotros/nosotros.html">Nosotros</a></li>
             <li class="enlaces"><a href="./accesorios.html">Accesorios</a></li>
             
