--- a/pages/suvs.html
+++ b/pages/suvs.html
@@ -15,6 +15,8 @@
         <li><a href="../pages/login.html">Iniciar Sesion</a></li>
         <li><a href="../pages/inicio.html">Inicio</a></li>
         <li><a href="../pages/models.html">Modelos</a></li>
+        <li><a href="../Nosotros/nosotros.html">Nosotros</a></li>
+        <li><a href="../Accesorios/accesorios.html">Accesorios</a></li>
     </ul>
     </nav>
     <div id="cont" class="cont">
