--- a/pages/reg.html
+++ b/pages/reg.html
@@ -23,7 +23,7 @@
         <source src="../Media/135728 (1080p).mp4" type="video/mp4">
     </video>
 
-    <script src="../js/reg.js"></script>
+    <script src="../js/reg.js" type="module></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
 </body>
 
