--- a/Accesorios/accesorios.html
+++ b/Accesorios/accesorios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="accesorios.css">
     <link rel="icon" href="./IMG/logoo.png" type="image/png">
-    <title>Accesorios</title>
+    <title>V E C C H I O<</title>
 </head>
 <body>
     <nav>
