--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nosotros.css">
     <link rel="icon" href="./IMG/logoo.png" type="image/png">
-    <title>Nosotros</title>
+    <title>V E C C H I O<</title>
 </head>
 <body>
    
